# simulation-server-modbus-gateway

./: README.md  docker-compose.yaml
client/: index.html  index.js
gateway/src/: asyncio-server.py
openplc-program/: simple-control2.st
openplc-program/simple control/: plc.xml
server/: Cargo.toml  Dockerfile
server/src/: lib.rs  main.rs
