[package]
name = "watertank_simulation_server"
version = "0.2.0"
authors = ["Jon-Martin Storm <jonmartin.storm@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "*"
rand_distr = "0.4"
env_logger = "0.8"
log = "0.4"
